Refactor ITmfDataEvent to ITmfDataItem